# Q-det-system

./: CMakeLists.txt  main.cpp  settings.cpp
